feat: favicon, og 설정

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
       rel="stylesheet"
       type="text/css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta property="og:title" content="버킷메이트" />
+    <meta
+      property="og:description"
+      content="같이 달성하는 나만의 버킷리스트, 버킷메이트"
+    />
+    <meta property="og:image" content="/og-image.png" />
+    <title>BucketMate</title>
   </head>
   <body>
     <div id="root"></div>
